--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "core-js": "^3.36.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.23.0",
